<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/mainLinear"
    android:background="@drawable/mainbackground">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_margin="20dp"
            android:textSize="25sp"
            android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:textSize="16sp"
             />

        <Button
            android:id="@+id/record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:textSize="16sp"
             />

        <Button
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:textSize="16sp"
             />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>



</LinearLayout>