<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mainbackground">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move"
        android:id="@+id/move"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:columnCount="2"
        android:rowCount="4"
        >

        <ImageButton
            android:id="@+id/btn1"
            android:layout_height="10dp"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image" />

        <ImageButton
            android:id="@+id/btn2"
            android:layout_height="10dp"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image"
            />

        <ImageButton
            android:id="@+id/btn3"
            android:layout_height="10dp"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image"
            />

        <ImageButton
            android:id="@+id/btn4"
            android:layout_height="10dp"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image"
            />

        <ImageButton
            android:id="@+id/btn5"
            android:layout_height="10dp"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image"
            />

        <ImageButton
            android:id="@+id/btn6"
            android:layout_height="10dp"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image"
            />

        <ImageButton
            android:id="@+id/btn7"
            android:layout_height="10dp"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image"
            />

        <ImageButton
            android:id="@+id/btn8"
            android:layout_height="10dp"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image"
            />

    </GridLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ads"
        android:id="@+id/hint"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/con"
        android:visibility="invisible"
        android:layout_margin="10dp"/>

</LinearLayout>